feat : init 프로젝트 초기 설정
- tsx next-create-app --typescript
- material ui 세팅 추가 , _document.tsx
- prettier
- tslint 초기 설

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,18 @@
 {
-  "extends": ["next", "next/core-web-vitals"]
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
+  "plugins": ["@typescript-eslint"],
+
+  "extends": ["next", "next/core-web-vitals","plugin:prettier/recommended"],
+  "rules": {
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
+  }
 }
